karnc/tests/fixtures/positive/70_context_mixed_exports/src/commerce/orders.karn
context commerce.orders {
  exports opaque      { OrderId }
  exports transparent { OrderError }

  type OrderId    = String where Matches("ORD-[0-9]+")
  type OrderError = enum {
    EmptyCart,
    InvalidQuantity,
  }
}
