karnc/tests/fixtures/negative/57_export_in_both_visibilities/src/commerce/orders.karn
context commerce.orders {
  exports opaque      { OrderId }
  exports transparent { OrderId }

  type OrderId = String where Matches("ORD-[0-9]+")
}
